# gmail-datalake-extractor

./: API_README.md  Dockerfile  README.md  docker-compose.yml  env.template  pyproject.toml
docs/: API_README.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
src/gmail_datalake_extractor/: __init__.py  api.py  auth.py  auth_helper.py  config.py  messages.py  models.py  server.py  task_storage.py
src/gmail_datalake_extractor/extract/: extract.py
src/gmail_datalake_extractor/sql/: attach_ducklake.sql  create_and_insert_messages.sql
src/message_extract/: __init__.py  api.py  auth.py  config.py  get_email.py  messages.py  models.py  server.py
src/message_extract/extract/: extract.py
src/message_extract/scripts/: __init__.py  server.py
src/message_extract/sql/: attach_ducklake.sql  create_and_insert_messages.sql
tests/: test_server.py
