[project]
name = "message-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fernando Mazzoni", email = "fernando1mazzoni@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "fastapi>=0.118.2",
    "google-api-python-client>=2.184.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.12.0",
]

[project.scripts]
message-extract = "message_extract:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
