[project]
name = "gmail-datalake-extractor"
version = "0.1.0"
description = "A FastAPI service for extracting Gmail messages and storing them in DuckLake with configurable backend support"
readme = "README.md"
authors = [{ name = "Fernando Mazzoni", email = "fernando1mazzoni@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "fastapi>=0.118.2",
    "google-api-python-client>=2.184.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.12.0",
    "uvicorn>=0.32.1",
    "pyarrow>=21.0.0",
    "jinja2>=3.1.6",
    "httpx>=0.28.1",
]

[project.scripts]
api-server = "gmail_datalake_extractor.server:main"
gmail-auth = "gmail_datalake_extractor.auth_helper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.3",
    "pyarrow-stubs>=20.0.0.20251107",
    "pytest>=8.4.2",
]
